Reworked ParentGatherer and related pom.xml manipulations
Introduced ParentHierarchyEntry that encapsulates MavenProject and
corresponding IMavenProjectFacade and reworked all clients of
ParentGatherer to use ParentHierarchyEntry instead of brittle
mapping between MavenProject and IMavenProjectFacade instances.

Signed-off-by: Igor Fedorenko <igor@ifedorenko.com>