@@ -21,7 +21,6 @@ import org.slf4j.LoggerFactory;
 
 import org.eclipse.core.runtime.CoreException;
 import org.eclipse.core.runtime.IProgressMonitor;
-import org.eclipse.core.runtime.NullProgressMonitor;
 import org.eclipse.jface.operation.IRunnableContext;
 import org.eclipse.jface.operation.IRunnableWithProgress;
 import org.eclipse.jface.viewers.IColorProvider;
@@ -43,12 +42,12 @@ import org.eclipse.swt.widgets.Display;
 import org.eclipse.ui.PlatformUI;
 import org.eclipse.ui.ide.IDE;
 
-import org.apache.maven.project.MavenProject;
+import org.apache.maven.model.Model;
 
-import org.eclipse.m2e.core.MavenPlugin;
 import org.eclipse.m2e.core.project.IMavenProjectFacade;
 import org.eclipse.m2e.core.ui.internal.MavenImages;
 import org.eclipse.m2e.core.ui.internal.util.ParentGatherer;
+import org.eclipse.m2e.core.ui.internal.util.ParentHierarchyEntry;
 
 
 public class PomHierarchyComposite extends Composite implements IInputSelectionProvider {
@@ -56,7 +55,7 @@ public class PomHierarchyComposite extends Composite implements IInputSelectionP
 
   private TreeViewer pomsViewer;
 
-  private List<MavenProject> hierarchy;
+  private List<ParentHierarchyEntry> hierarchy;
 
   public PomHierarchyComposite(Composite parent, int style) {
     super(parent, style);
@@ -77,65 +76,58 @@ public class PomHierarchyComposite extends Composite implements IInputSelectionP
 
   public void computeHeirarchy(final IMavenProjectFacade project, IRunnableContext context) {
     try {
-      if(context != null) {
-        context.run(false, true, new IRunnableWithProgress() {
-          public void run(IProgressMonitor monitor) throws InvocationTargetException, InterruptedException {
-            try {
-              computeHeirarchy(project, monitor);
-            } catch(CoreException e) {
-              throw new InvocationTargetException(e);
-            }
-          }
-        });
-      } else {
-        computeHeirarchy(project, new NullProgressMonitor());
+      if(context == null) {
+        context = PlatformUI.getWorkbench().getProgressService();
       }
+      context.run(false, true, new IRunnableWithProgress() {
+        public void run(IProgressMonitor monitor) throws InvocationTargetException {
+          try {
+            computeHeirarchy(project, monitor);
+          } catch(CoreException e) {
+            throw new InvocationTargetException(e);
+          }
+        }
+      });
     } catch(Exception e) {
       LOG.error("An error occurred building pom heirarchy", e); //$NON-NLS-1$
     }
   }
 
-  private void computeHeirarchy(IMavenProjectFacade projectFacade, IProgressMonitor monitor) throws CoreException {
-    LinkedList<MavenProject> hierarchy = new LinkedList<MavenProject>();
-    hierarchy.addAll(new ParentGatherer(projectFacade.getMavenProject(monitor), projectFacade)
-        .getParentHierarchy(monitor));
+  void computeHeirarchy(IMavenProjectFacade projectFacade, IProgressMonitor monitor) throws CoreException {
+    LinkedList<ParentHierarchyEntry> hierarchy = new LinkedList<ParentHierarchyEntry>();
+    hierarchy.addAll(new ParentGatherer(projectFacade).getParentHierarchy(monitor));
     setHierarchy(hierarchy);
   }
 
-  public void setHierarchy(LinkedList<MavenProject> hierarchy) {
+  public void setHierarchy(List<ParentHierarchyEntry> hierarchy) {
     this.hierarchy = hierarchy;
     pomsViewer.setInput(hierarchy);
     pomsViewer.expandAll();
   }
 
   public static class DepLabelProvider extends LabelProvider implements IColorProvider {
-    /*
-     * (non-Javadoc)
-     * 
-     * @see
-     * org.eclipse.jface.viewers.LabelProvider#getText(java.lang.Object)
-     */
     @Override
     public String getText(Object element) {
-      MavenProject project = null;
-      if(element instanceof MavenProject) {
-        project = (MavenProject) element;
+      ParentHierarchyEntry project = null;
+      if(element instanceof ParentHierarchyEntry) {
+        project = (ParentHierarchyEntry) element;
       } else if(element instanceof Object[]) {
-        project = (MavenProject) ((Object[]) element)[0];
+        project = (ParentHierarchyEntry) ((Object[]) element)[0];
       } else {
         return ""; //$NON-NLS-1$
       }
-      StringBuffer buffer = new StringBuffer();
-      buffer.append(project.getGroupId() + " : " + project.getArtifactId() + " : " + project.getVersion()); //$NON-NLS-1$ //$NON-NLS-2$
+      StringBuilder buffer = new StringBuilder();
+      Model model = project.getProject().getModel();
+      buffer.append(model.getGroupId()).append(" : ") //$NON-NLS-1$
+          .append(model.getArtifactId()).append(" : ") //$NON-NLS-2$
+          .append(model.getVersion());
       return buffer.toString();
     }
 
     public Color getForeground(Object element) {
-      if(element instanceof MavenProject) {
-        MavenProject project = (MavenProject) element;
-        IMavenProjectFacade search = MavenPlugin.getMavenProjectRegistry().getMavenProject(project.getGroupId(),
-            project.getArtifactId(), project.getVersion());
-        if(search == null) {
+      if(element instanceof ParentHierarchyEntry) {
+        ParentHierarchyEntry project = (ParentHierarchyEntry) element;
+        if(project.getFacade() == null) {
           // This project is not in the workspace
           return Display.getDefault().getSystemColor(SWT.COLOR_DARK_GRAY);
         }
@@ -148,31 +140,28 @@ public class PomHierarchyComposite extends Composite implements IInputSelectionP
     }
 
     public Image getImage(Object element) {
-      if(element instanceof MavenProject) {
-        MavenProject project = (MavenProject) element;
-        IMavenProjectFacade search = MavenPlugin.getMavenProjectRegistry().getMavenProject(project.getGroupId(),
-            project.getArtifactId(), project.getVersion());
-        if(search == null) {
+      if(element instanceof ParentHierarchyEntry) {
+        ParentHierarchyEntry project = (ParentHierarchyEntry) element;
+        if(project.getFacade() == null) {
           // This project is not in the workspace
           return MavenImages.getOverlayImage(MavenImages.PATH_JAR, MavenImages.PATH_LOCK, IDecoration.BOTTOM_LEFT);
-        } else {
-          return PlatformUI.getWorkbench().getSharedImages().getImage(IDE.SharedImages.IMG_OBJ_PROJECT);
         }
+        return PlatformUI.getWorkbench().getSharedImages().getImage(IDE.SharedImages.IMG_OBJ_PROJECT);
       }
       return null;
     }
   }
 
   public static class PomHeirarchyContentProvider implements ITreeContentProvider {
-    private LinkedList<MavenProject> projects;
+    private List<ParentHierarchyEntry> projects;
 
     public PomHeirarchyContentProvider() {
     }
 
     @SuppressWarnings("unchecked")
     public void inputChanged(Viewer viewer, Object oldInput, Object newInput) {
-      if(newInput instanceof LinkedList) {
-        this.projects = (LinkedList<MavenProject>) newInput;
+      if(newInput instanceof List) {
+        this.projects = (List<ParentHierarchyEntry>) newInput;
       }
     }
 
@@ -186,57 +175,52 @@ public class PomHierarchyComposite extends Composite implements IInputSelectionP
     }
 
     public Object getParent(Object element) {
-      if(element instanceof MavenProject) {
-        MavenProject project = (MavenProject) element;
-        return project.getParent();
+      if(element instanceof ParentHierarchyEntry) {
+        for(int i = 1; i < projects.size(); i++ ) {
+          if(projects.get(i) == element) {
+            return projects.get(i - 1);
+          }
+        }
       }
       return null;
     }
 
-    /*
-     * Return root element (non-Javadoc)
-     * 
-     * @see
-     * org.eclipse.jface.viewers.ITreeContentProvider#getElements(java.lang
-     * .Object)
-     */
     @SuppressWarnings("unchecked")
     public Object[] getElements(Object inputElement) {
-
       if(inputElement instanceof LinkedList) {
-        LinkedList<MavenProject> projects = (LinkedList<MavenProject>) inputElement;
+        List<ParentHierarchyEntry> projects = (List<ParentHierarchyEntry>) inputElement;
         if(projects.isEmpty()) {
           return new Object[0];
         }
-        return new Object[] {projects.getLast()};
+        return new Object[] {projects.get(projects.size() - 1)};
       }
       return new Object[0];
     }
 
     public Object[] getChildren(Object parentElement) {
-      if(parentElement instanceof MavenProject) {
+      if(parentElement instanceof ParentHierarchyEntry) {
         /*
          * Walk the hierarchy list until we find the parentElement and
          * return the previous element, which is the child.
          */
-        MavenProject parent = (MavenProject) parentElement;
+        ParentHierarchyEntry parent = (ParentHierarchyEntry) parentElement;
 
         if(projects.size() == 1) {
           // No parent exists, only one element in the tree
           return new Object[0];
         }
 
-        if(projects.getFirst().equals(parent)) {
+        if(projects.get(0).equals(parent)) {
           // We are the final child
           return new Object[0];
         }
 
-        ListIterator<MavenProject> iter = projects.listIterator();
+        ListIterator<ParentHierarchyEntry> iter = projects.listIterator();
         while(iter.hasNext()) {
-          MavenProject next = iter.next();
+          ParentHierarchyEntry next = iter.next();
           if(next.equals(parent)) {
             iter.previous();
-            MavenProject previous = iter.previous();
+            ParentHierarchyEntry previous = iter.previous();
             return new Object[] {previous};
           }
         }
@@ -265,18 +249,22 @@ public class PomHierarchyComposite extends Composite implements IInputSelectionP
     pomsViewer.setSelection(selection);
   }
 
-  public List<MavenProject> getHierarchy() {
+  public List<ParentHierarchyEntry> getHierarchy() {
     return hierarchy;
   }
 
-  public MavenProject fromSelection() {
+  public ParentHierarchyEntry fromSelection() {
     ISelection selection = pomsViewer.getSelection();
     if(selection instanceof IStructuredSelection) {
       Object obj = ((IStructuredSelection) selection).getFirstElement();
-      if(obj instanceof MavenProject) {
-        return (MavenProject) obj;
+      if(obj instanceof ParentHierarchyEntry) {
+        return (ParentHierarchyEntry) obj;
       }
     }
     return null;
+  }
+
+  public ParentHierarchyEntry getProject() {
+    return hierarchy.get(hierarchy.size() - 1);
   }
 }
